--- a/YoutubeDownloader/YoutubeDownloaderAPI/YoutubeDownloaderAPI.csproj
+++ b/YoutubeDownloader/YoutubeDownloaderAPI/YoutubeDownloaderAPI.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Films\" />
   </ItemGroup>
 
 </Project>
